<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@android:color/holo_blue_dark"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="411dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:ignore="UselessParent"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="-3dp">

        <TextView
            android:id="@+id/MenuTitle"
            android:layout_width="411dp"
            android:layout_height="wrap_content"
            android:background="#3F51B5"
            android:text="Implicit Intents"
            android:textColor="#000000"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/website_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:text="@string/edittext_uri" />

        <Button
            android:id="@+id/open_website_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="92dp"
            android:layout_marginBottom="24dp"
            android:onClick="openWebsite"
            android:text="@string/button_uri" />

        <EditText
            android:id="@+id/location_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:text="@string/edittext_loc" />

        <Button
            android:id="@+id/open_location_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="92dp"
            android:layout_marginBottom="24dp"
            android:onClick="openLocation"
            android:text="@string/button_loc" />


        <EditText
            android:id="@+id/share_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:text="@string/edittext_share" />

        <Button
            android:id="@+id/share_text_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="92dp"
            android:layout_marginBottom="24dp"
            android:onClick="shareText"
            android:text="@string/button_share" />

        <Button
            android:id="@+id/camera_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_photo"
            android:onClick="takePhoto"/>


    </LinearLayout>
</LinearLayout>